Moved into subdirs

--- a/single_file/Makefile
+++ b/single_file/Makefile
@@ -6,17 +6,15 @@ INLCUDES := -I/usr/include/python2.7/ -I/usr/include/
 LIB_DIRS := -L/usr/lib
 LIBS := -lpython2.7 -lboost_python
 
-
 all: main
 
-FILENAME :=hello
+FILENAME := hello
 PYTHON_LIBNAME := hello_ext
 
-main: single_file
-	cd single_file; $(MAKE)
-
-using_class: class
-	cd class; $(MAKE)
+main: $(FILENAME).cpp
+	$(CC) $(CFLAGS) $(INLCUDES) -c $(FILENAME).cpp
+	$(CC) -shared -o $(PYTHON_LIBNAME).so $(FILENAME).o $(LIB_DIRS) $(LIBS)
+	python run.py
 
 clean:
 	-rm *.so
