Added sip, but it is missing a symbol, pybind11 submodule

--- a/boost/class/Makefile
+++ b/boost/class/Makefile
@@ -1,4 +1,4 @@
-CC=g++
+CXX=g++
 CFLAGS=-Wall -std=c++0x -fpic
 
 PYTHON_LIBRARIES := -lpython2.7 -lboost_python
@@ -9,8 +9,8 @@ LIBS := -lpython2.7 -lboost_python
 all: main
 
 liblodepng:
-	$(CC) $(CFLAGS) $(INLCUDES) -c ../../libs/lodepng.cpp
-	$(CC) -shared -o liblodepng.so lodepng.o
+	$(CXX) $(CFLAGS) $(INLCUDES) -c ../../libs/lodepng.cpp
+	$(CXX) -shared -o liblodepng.so lodepng.o
 
 CLASS_FILENAME := png_reader
 CLASS_PYTHON_LIBNAME := png_reader
@@ -18,8 +18,8 @@ PACKAGE_DIR := /home/dtasev/dev/cpptopy/boost/class
 
 main: liblodepng
 	$(MAKE) liblodepng
-	$(CC) $(CFLAGS) $(INLCUDES) -c $(CLASS_FILENAME).cpp
-	$(CC) -shared -o $(CLASS_PYTHON_LIBNAME).so $(CLASS_FILENAME).o $(LIB_DIRS) $(LIBS) -L$(PACKAGE_DIR) -Wl,-rpath=$(PACKAGE_DIR) -llodepng
+	$(CXX) $(CFLAGS) $(INLCUDES) -c $(CLASS_FILENAME).cpp
+	$(CXX) -shared -o $(CLASS_PYTHON_LIBNAME).so $(CLASS_FILENAME).o $(LIB_DIRS) $(LIBS) -L$(PACKAGE_DIR) -Wl,-rpath=$(PACKAGE_DIR) -llodepng
 	python run.py
 
 clean:
